# l61

./: .clang-format  .dockerignore  .gitignore  BuildOptions.cmake  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  PKGBUILD  README.md  base_interface.cmake  build.l61  dev_setup.sh  docker_dev_setup.sh  full_build.sh  install.sh  l61_config.h.in  package.sh
.github/workflows/: TestingWorkflow.yml  static.yml  staticDoxygenPages.yml
ShallFrontEnd/: CMakeLists.txt
ShallFrontEnd/src/: main.cpp
StandardFrontEnd/: CMakeLists.txt
StandardFrontEnd/src/: main.cpp
Testing/: CMakeLists.txt
Testing/l61Core/: CMakeLists.txt  NullTest.cpp  ObjectTest.cpp  testt.cpp
Testing/l61Core/EventSystem/: EventTests.cpp
Testing/l61Core/RosettaSystem/: EnvironmentVariableTests.cpp
baseExtensions/: CMakeLists.txt  extension.mk
baseExtensions/base/: CMakeLists.txt  Makefile  main.cpp
baseExtensions/base/src/: main.cpp
baseExtensions/fs/: CMakeLists.txt  Makefile
baseExtensions/fs/include/: getFilteredFilePath.hpp
baseExtensions/fs/src/: getFilteredFilePath.cpp  main.cpp
baseExtensions/lua61/: CMakeLists.txt
baseExtensions/lua61/src/: main.cpp
deploymentFileSystem/lib/: test.lua
deploymentFileSystem/lib/cmake/: l61Config.cmake
deploymentFileSystem/lib/meta/: l61.lua  pp_idea.lua
deploymentFileSystem/lib/native/: .holdOpen.txt
extensionRuntime/: CMakeLists.txt  Makefile  lex61rt.hpp  rt_main.cpp
extensionRuntime/src/: rt_main.cpp
frontEnds/: CMakeLists.txt
frontEnds/StandardFrontEnd/src/: main.cpp
frontendRuntime/: CMakeLists.txt
frontendRuntime/src/: frontend_rt_main.cpp
include/: AbstractScriptDebugger.hpp  BuildScript.hpp  Event.hpp  EventBus.hpp  ExtensionManager.hpp  IBasicScriptEngine.hpp  Logger.hpp  NativeExtension.hpp  Object.hpp  ScriptEnvironment.hpp  ShellScript.hpp  argh.h  defs.hpp  l61Object.hpp  utils.hpp
include/l61/: AbstractScriptDebugger.hpp  BuildScript.hpp  Event.hpp  EventBus.hpp  ExtensionManager.hpp  IBasicScriptEngine.hpp  NativeExtension.hpp  Object.hpp  PseudoKeywords.hpp  ScriptEnvironment.hpp  ShellScript.hpp  defs.hpp  meta.hpp
include/sol/: config.hpp  forward.hpp
l61Core/: CMakeLists.txt
l61Core/include/l61/: Event.hpp  EventBus.hpp  IBasicScriptEngine.hpp  Logger.hpp  NativeExtension.hpp  Object.hpp  PseudoKeywords.hpp  ScriptEnvironment.hpp  ShellInterpreterEnvironment.hpp  ShellScript.hpp  baseTypes.hpp  defs.hpp  getCentralStatusObject.hpp  meta.hpp  utils.hpp
l61Core/include/l61/BaseObjects/: Object.hpp
l61Core/include/l61/EventSystem/: Event.hpp  EventBus.hpp  IEventBusContainer.hpp  MessageBus.hpp  MessageBusPackets.hpp  types.hpp
l61Core/include/l61/EventSystem/Timing/: AbstractTimer.hpp  AsyncTimer.hpp
l61Core/include/l61/ExtensionSystem/: AbstractExtensionEntryPoint.hpp  ExtensionHeaders.hpp  ExtensionManager.hpp  NativeExtension.hpp
l61Core/include/l61/RosettaSystem/: EnvironmentVariable.hpp  getExecutablePath.hpp  loadSharedLibrary.h  loadSharedLibraryTypes.h
l61Core/include/l61/ScriptEngine/: AbstractScriptDebugger.hpp  BuildScript.hpp  FileBackedScriptEnvironment.hpp  IBasicScriptEngine.hpp  RunnableScriptEnvironment.hpp  ScriptEnvironment.hpp
l61Core/include/sol/: sol.hpp
l61Core/src/: ExtensionManager.cpp  NativeExtension.cpp  ScriptEnvironment.cpp  getCentralStatusObject.cpp  mstat.cpp  utils.cpp
l61Core/src/BaseObjects/: CMakeLists.txt  Object.cpp
l61Core/src/EventSystem/: CMakeLists.txt  Event.cpp  EventBus.cpp  MessageBus.cpp
l61Core/src/EventSystem/Timing/: AbstractTimer.cpp  AsyncTimer.cpp
l61Core/src/ExtensionSystem/: CMakeLists.txt  ExtensionManager.cpp  NativeExtension.cpp
l61Core/src/RosettaSystem/: CMakeLists.txt  EnvironmentVariable.cpp  getExecutablePath.cpp  loadSharedLibrary.c
l61Core/src/ScriptEngine/: AbstractScriptDebugger.cpp  BuildScript.cpp  CMakeLists.txt  FileBackedScriptEnvironment.cpp  RunnableScriptEnvironment.cpp  ScriptEnvironment.cpp  ShellInterpreterEnvironment.cpp
preDoc/: home.md
src/: AbstractScriptDebugger.cpp  BuildScript.cpp  Event.cpp  EventBus.cpp  ExtensionManager.cpp  NativeExtension.cpp  Object.cpp  ScriptEnvironment.cpp  ShellScript.cpp  l61Object.cpp  main.cpp  utils.cpp
